--- a/fp.html
+++ b/fp.html
@@ -9,7 +9,6 @@
 		<script type="text/javascript" src="getCam.js"></script>
 		<script type="text/javascript" src="makeskybox.js"></script>
 		<script type="text/javascript" src="getModel.js"></script>
-		<script type="text/javascript" src="getEnemy.js"></script>
 		<script type="text/javascript" src="mapControls.js"></script>
 		<script type="text/javascript" src="enemyAI.js"></script>
 
@@ -32,11 +31,17 @@
 
 				//make scene
 				scene = new BABYLON.Scene(engine);
-				scene.onDispose = function () {
-						canvas.removeEventListener("pointerdown", onPointerDown);
-						canvas.removeEventListener("pointerup", onPointerUp);
-						canvas.removeEventListener("pointermove", onPointerMove);
-				}
+
+				// WHEN CLICK, REMOVE THE CURSOR/POINTER MOUSE
+      // canvas.addEventListener("click", function(evt) {
+      //   canvas.requestPointerLock = canvas.requestPointerLock || canvas.msRequestPointerLock || canvas.mozRequestPointerLock || canvas.webkitRequestPointerLock;
+      //   if (canvas.requestPointerLock) {
+      //       canvas.requestPointerLock();
+      //   }
+      // }, false);
+			//
+      // // ATTACH CAMERA AND CURSOR
+      // engine.isPointerLock = true;
 
 				//var music = new BABYLON.Sound("Music", "wotw.wav", scene, null, { loop: true, autoplay: true });
         //gravity = new BABYLON.Vector3(0, -9.8 ,0);
@@ -48,7 +53,7 @@
 				var skybox = makeSkybox(scene,"CloudyLightRays");
 
 				//insert ground
-				var ground = BABYLON.Mesh.CreateGround("ground", 10000,10000,1, scene);
+				var ground = BABYLON.Mesh.CreateGround("ground", 1000,1000,1, scene);
 				ground.rotation.x = Math.PI; // cull out ground
 
 				//inser camera
@@ -65,20 +70,53 @@
 				lightSphere.material.emissiveColor = new BABYLON.Color3(1, 1, 0);
 
 				player = getPlayer(scene);
-				camera.lockedTarget = player;
+				//camera.lockedTarget = player;
 
-				enemy = getEnemy(scene);
-				enemy.position = new BABYLON.Vector3(20,3,20);
 
-/*
+				// for (var i = 1; i <= level; i++) {
+				// 	mons[i] = getEnemy(scene);
+				// 	//mons[i] = new BABYLON.MeshBuilder.CreateBox("", {height:4, width:5.5, depth:23}, scene);
+				//
+				// 	if (Math.floor(i%2) != 0) {
+				// 		mons[i].position = new BABYLON.Vector3(player.position.x - (Math.floor(Math.random()*100)+10), 3, player.position.x - (Math.floor(Math.random()*100)+10));
+				// 	}
+				// 	else {
+				// 		mons[i].position = new BABYLON.Vector3(player.position.x + (Math.floor(Math.random()*100)+10), 3, player.position.x + (Math.floor(Math.random()*100)+10));
+				// 	}
+				// 	alert(mons[i].position);
+				// }
+
+				mons = {};
+				var level = 3;
+				var i = 0;
+				var frameRate = 60;
+
 				setInterval(function(){
-					getEnemy(scene);
-				},5000);*/
+					if(i<level){
+						mons[i] = getEnemy(scene);
+						//mons[i] = new BABYLON.MeshBuilder.CreateBox("", {height:4, width:5.5, depth:23}, scene);
 
+						if (Math.floor(i%2) != 0) {
+							mons[i].position = new BABYLON.Vector3(player.position.x - (Math.floor(Math.random()*70)+10),3,player.position.x - (Math.floor(Math.random()*70)+10));
+						}
+						else {
+							mons[i].position = new BABYLON.Vector3(player.position.x + (Math.floor(Math.random()*70)+10),3,player.position.x + (Math.floor(Math.random()*70)+10));
+						}
+						scene.beginDirectAnimation(mons[i], [side2side(mons[i].position.x)], 0, 2 * frameRate, true);
+						i++;
+
+				}
+			},5000);
+
+				cnt = 0;
 				scene.registerBeforeRender(function () {
-					moveEnemy();
-
 					holdPlayer();
+					//moveEnemy(mons[cnt]);
+					cnt++;
+					if (cnt>level) {
+						cnt = 0;
+					}
+					waterFlow(skybox);
 
 				});
 
